t
file:///Users/pablo/pm/ifctool/src/Ifc.js:193
    })
     ^

SyntaxError: Unexpected token ')'
    at ESMLoader.moduleStrategy (node:internal/modules/esm/translators:117:18)
    at ESMLoader.moduleProvider (node:internal/modules/esm/loader:337:14)

Node.js v17.8.0
